# py_workflow

./: .gitignore  README.md  docker-compose.yml  setup.sh
client/: README.md  index.html  package-lock.json  package.json  vite.config.js
client/src/: App.jsx  index.css
client/src/components/: Layout.jsx
client/src/pages/: AgentDetail.jsx  Agents.jsx  Dashboard.jsx  ExecutionDetail.jsx  Executions.jsx  NotFound.jsx  Tools.jsx  WorkflowDetail.jsx  Workflows.jsx
client/src/services/: api.js
server/: .env.example  README.md  main.py  pyproject.toml  requirements.txt  test_server.py
server/app/api/v1/: router.py
server/app/api/v1/endpoints/: agents.py  executions.py  health.py  tools.py  workflows.py
server/app/core/: config.py  database.py  llm_providers.py  workflow_engine.py
server/app/models/: agent.py  execution.py  workflow.py
server/app/services/: agent_service.py  tool_service.py  workflow_service.py
